telicent/bases/smart-cache-graph/istio/authorizationpolicy/allow-ingress-to-server.yaml
#  Copyright (c) Telicent Ltd.
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.
#
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy

metadata:
  name: allow-ingress-to-server

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: graph-server
  action: ALLOW
  rules:
    - from:
        - source:
            principals: [] # Principals are patched when namespace service accounts are known (in profiles)
      to:
        - operation:
            paths:
              - /knowledge/sparql
              - /knowledge/sparql/*
              - /knowledge/query
              - /knowledge/query/*
              - /ontology/sparql
              - /ontology/sparql/*
              - /ontology/query
              - /ontology/query/*
              - /catalog/sparql
              - /catalog/sparql/*
              - /catalog/query
              - /catalog/query/*
            methods:
              - "GET"
              - "POST"
        - operation:
            paths:
              - /knowledge/graphql
              - /knowledge/graphql/*
              - /knowledge/shacl
              - /knowledge/shacl/*
            methods:
              - "POST"
      when:
        - key: request.auth.claims[groups]
          values:
            - tc_read
